fix lists displays on mobile

--- a/recipes/recipes-style.css
+++ b/recipes/recipes-style.css
@@ -19,7 +19,6 @@ ul{
   list-style: none;
   padding: 0;
   margin: 0;
-
 }
 ol{
   text-align: justify;
@@ -36,7 +35,7 @@ a:hover{
 
 @media (max-width: 480px) {
   body {
-    margin: 20px;
+    margin: 10px;
     
   }
   img {
@@ -44,5 +43,13 @@ a:hover{
     width: 100%;
     object-fit: cover;
     object-position: 59% 50%;
+  }
+  ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  ol{
+    text-align: justify;
   }
 }
